Added textview upload status to profile.class

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -26,4 +26,9 @@
         android:layout_height="wrap_content"
         android:onClick="BackToMenu"
         android:text="Back to Menu" />
+
+    <TextView
+        android:id="@+id/tvUploadRate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
