--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -11,7 +11,7 @@
         android:id="@+id/ivAvatar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/avatar" />
+        app:srcCompat="@drawable/snake" />
 
     <Button
         android:id="@+id/btnUpload"
