User can now set avatar by gallery or camera

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,15 +10,35 @@
     <ImageView
         android:id="@+id/ivAvatar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         app:srcCompat="@drawable/snake" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnSetByGallery"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:onClick="setImage"
+            android:text="Set Avatar by Gallery" />
+
+        <Button
+            android:id="@+id/btnSetByCamera"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:onClick="setImage"
+            android:text="Set Avatar by Camera" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnUpload"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="uploadImage"
-        android:text="Upload" />
+        android:text="Upload Avatar" />
 
     <Button
         android:id="@+id/btnBackToMenu"
