Fixed previous commit by changed textview id from tvUploadrate to tvStatus

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -53,7 +53,7 @@
         android:text="Back to Menu" />
 
     <TextView
-        android:id="@+id/tvUploadRate"
+        android:id="@+id/tvStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"/>
