Fixed positions of set avatar buttons in avatar preview

--- a/app/src/main/res/layout/activity_avatar_preview.xml
+++ b/app/src/main/res/layout/activity_avatar_preview.xml
@@ -26,7 +26,7 @@
 
         <Button
             android:id="@+id/btnSetByCamera"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:onClick="setImage"
             android:text="Set Avatar by Camera" />
